[package]
name = "rustycss"
version = "0.1.1"
edition = "2018"
repository = "https://github.com/CGQAQ/rustycss"
homepage = "https://github.com/CGQAQ/rustycss"
description = "Postcss implements in rust"
license = "GPL-3.0-only"
keywords = ["postcss", "css", "frontend", "frontend-tool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.6"